<resources>
    <string name="app_name">Movies</string>
    <string name="button">Button</string>
    <string name="load_movies">Load Movies</string>
    <string name="movie_name">movie_name</string>
    <string name="movie_year">movie_year</string>
    <string name="movie_duration">movie_duration</string>
    <string name="todo">TODO</string>
    <string name="movie_rating">movie_rating</string>
    <string name="movie_vote">movie_vote</string>
    <string name="movie_metascore">movie_metascore</string>
    <string name="hello_viewer">Hello Viewer</string>
    <string name="title">Title</string>
    <string name="moviebanner">banner</string>
    <string name="movie_title">movie_title</string>
    <string name="movie_gross">movie_gross</string>
    <string name="latest_movies">latest</string>
    <string name="action_movies">action</string>
    <string name="top_movies">top</string>
    <string name="romantic_movies">romantic</string>
    <string name="series_movies">series</string>
    <string name="random_movies">random</string>
    <string name="scifi_movies">sci-fi</string>
    <string name="animation">animation</string>
    <string name="horror_movies">horror</string>
    <string name="movie_story">movie story</string>
    <string name="movie_genre">movie_genre</string>
    <string name="movie_synopsis">movie_synopsis</string>
    <string name="rate_this_movie">Rate this Movie</string>
    <string name="welcome_to_movies">Welcome to Movie Reviewer</string>
    <string name="find_over_2k_movies">Find Over 2k+ Movie Reviews</string>
    <string name="current_categories">Current Categories</string>
    <string name="release">Release:</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="explore_find_unlimited_fun_experiences">Explore.Find.Unlimited.Reviews</string>
    <string name="home_poster">Home Poster</string>
    <string name="already_watched_this_movie_add_your_review_and_rating">Already watched this movie? Add your review and rating</string>
    <string name="add_review_and_rating">add review and rating</string>
    <string name="welcome_you_can_add_you_movie_review_and_rating_below_thank_you">Welcome, you can add you movie review and rating below. Thank you</string>
    <string name="enter_your_movie_review">Enter your movie review</string>
    <string name="enter_your_rating_1_10">Enter your rating (1-10)</string>
    <string name="submit">submit</string>
    <string name="movie_title_review">Movie Title Review</string>
    <string name="view_reviews">view reviews</string>

</resources>
