<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movies_row_background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.bosphere.fadingedgelayout.FadingEdgeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fel_edge="bottom">

            <ImageView
                android:id="@+id/imageview_main_poster"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/home_poster" />

        </com.bosphere.fadingedgelayout.FadingEdgeLayout>


        <TextView
            android:id="@+id/textview_poster_name"
            android:text="@string/welcome_to_movies"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal" />

        <TextView
            android:text="@string/find_over_2k_movies"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal" />

        <TextView
            android:text="@string/explore_find_unlimited_fun_experiences"
            android:textAlignment="center"
            android:layout_marginTop="90dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

    </FrameLayout>

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_below="@id/framelayout"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_categories"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow android:padding="5dp">

            <Button
                android:id="@+id/latest_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_1"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:text="@string/latest_movies"
                android:layout_marginEnd="2dp" />

            <Button
                android:id="@+id/top_movies"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_1"
                android:text="@string/top_movies"
                android:layout_marginStart="2dp" />

        </TableRow>

        <TableRow android:padding="5dp">

            <Button
                android:id="@+id/action_movies"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_2"
                android:text="@string/action_movies"
                android:layout_marginEnd="2dp" />

            <Button
                android:id="@+id/romantic_movies"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_2"
                android:text="@string/romantic_movies"
                android:layout_marginStart="2dp" />

        </TableRow>

        <TableRow android:padding="5dp">
            <Button
                android:id="@+id/scifi_movies"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_3"
                android:text="@string/scifi_movies"
                android:layout_marginEnd="2dp" />

            <Button
                android:id="@+id/random_movies"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_3"
                android:text="@string/random_movies"
                android:layout_marginStart="2dp" />

        </TableRow>

        <TableRow android:padding="5dp">
            <Button
                android:id="@+id/animation_movies"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_4"
                android:text="@string/animation"
                android:layout_marginEnd="2dp" />

            <Button
                android:id="@+id/horror_movies"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_4"
                android:text="@string/horror_movies"
                android:layout_marginStart="2dp" />

        </TableRow>


    </TableLayout>


</RelativeLayout>